patchage (UNRELEASED) unstable; urgency=low

  * Make it possible to remove connections by middle-clicking on their
    handle, or selecting them and pressing delete.
  * Fix font configuration on OSX.
  * Remove Raul dependency.

 -- David Robillard <d@drobilla.net>  (UNRELEASED)

patchage (0.5.0) unstable; urgency=low

  * Auto-arrange interface modules sanely (align corresponding inputs/outputs)
  * Add -J (--no-jack) command line option
  * Add proper --help output and man page
  * Improve performance (dramatically for large setups)
  * Fancy console info/warning/error logging
  * Fix minor memory leaks and reduce memory consumption
  * Fix handling of ALSA duplex ports
  * Hide "split" module menu item when it is useless
  * Fix Jack D-Bus support
  * Mac OS X .app bundle port
  * Bump FlowCanvas dependency to 0.7.0
  * Add more/larger icons
  * Add missing COPYING file to distribution
  * Build system and code quality improvements

 -- David Robillard <d@drobilla.net>  Tue, 11 Jan 2011 17:42:07 -0500

patchage (0.4.5) unstable; urgency=low

  * Install SVG icon
  * Fix compilation without Jack
  * Improve performance when dragging modules
  * Bump FlowCanvas dependency to 0.6.0
  * Upgrade to waf 1.5.18

 -- David Robillard <d@drobilla.net>  Fri, 03 Sep 2010 20:24:36 -0400


patchage (0.4.4) unstable; urgency=low

  * Fix incorrect icon install paths

 -- David Robillard <d@drobilla.net>  Wed, 09 Dec 2009 10:17:37 -0500


patchage (0.4.3) unstable; urgency=low

  * Switch to waf build system
  * Fix compilation with GCC 4.4
  * Better ALSA support
  * Massive performance improvements when ALSA is enabled
  * Center on startup

 -- David Robillard <d@drobilla.net>  Tue, 08 Dec 2009 21:13:37 -0500


patchage (0.4.2) unstable; urgency=low

  * LASH support via D-BUS from ladi-patchage branch
  * Remove old LASH support via liblash

 -- David Robillard <d@drobilla.net>  Tue, 09 Sep 2008 15:41:04 -0400


patchage (0.4.1) unstable; urgency=low
